- local transport is moved to its own module, to show that the transport is really pluggable. - fixed a build script to accomodate this change.
- the test harness is updated to get transport through a pluggability point, not through a hacky custom PipeAssemblerFactory.
- WSDL has to point to the correct address (in this case a local transport), I wrote an ant task to patch WSDL @address
  to point to any value. I use this to make it point to the local transport.